--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my_nodeJs</title>
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
     <script src="scripts.js" defer></script>
 </head>
+
 <body>
-    <h1 class="h1">Aprendendo NodeJs</h1>
+    <header>
+        <div class="header">
+            <h1 class="h1">Aprendendo NodeJs</h1>
+            <h2 class="h2">Curso de Desenvolvimento Web 2 - <abbr title="Instituto Federal do Ceará">IFCE</abbr></h2>
+        </div>
+    </header>
+
+    <section>
+        <div class="div_img">
+            <img id="img" src="/img/desligado.png" alt="Semáfaros">
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer">
+            <p>&copy; Maciel Lima - 2025</p>
+        </div>
+    </footer>
 </body>
+
 </html>
